# Bielik-how-to-start

./: .gitignore  Bielik_(4_bit)_RAG.ipynb  Bielik_(4_bit)_Text_Improvement.ipynb  Bielik_(4_bit)_simple_examples.ipynb  Bielik_2_(4_bit)_RAG.ipynb  Bielik_2_(4_bit)_sentiment_analysis.ipynb  Bielik_2_(4_bit)_simple_examples.ipynb  Bielik_2_(AWQ)_structured_output.ipynb  Bielik_2_Ollama_integration.ipynb  Bielik_Data_Generation_and_Fewshot_Prompting_(4_bit).ipynb  Bielik_Instruct_QUANT_Tests.ipynb  Bielik_Ollama_integration.ipynb  Bielik_Streamlit_simple_app_tunnel_4bit.ipynb  Bielik_Streamlit_simple_app_tunnel_GGUF_Q4.ipynb  LICENSE  README.md  Speakleash_Bielik_Data_Generation_and_Fewshot_Prompting_(4_bit).ipynb  Speakleash_Bielik_Data_Generation_and_Finetuning_(4_bit).ipynb  Speakleash_Bielik_Poprawa_Tekstu.ipynb  Speakleash_Draive_Basic_Usage.py  Speakleash_Notatnik_BielikV2_(4_bit)_JSON.ipynb  Speakleash_Notatnik_BielikV2_(4_bit)_sentiment_analysis.ipynb  Speakleash_Notatnik_Bielik_(4_bit)_JSON_output.ipynb  Speakleash_Notatnik_Bielik_(4_bit)_RAG.ipynb  Speakleash_Notatnik_Bielik_(4_bit)_keywords.ipynb  Speakleash_Notatnik_Bielik_(4_bit)_sentiment_analysis.ipynb  Speakleash_Notatnik_Bielik_(4_bit)_simple_examples.ipynb  Speakleash_ollama.ipynb  Speaklesh_ollama.ipynb  draive_example.py  pyproject.toml  utils.py
contract_enhancer/: README.md  interface.py  requrements.txt  utils.py  vectorizer.py
draive/: README.md  Speakleash_Draive_Basic_Usage.py
