[tool.poetry]
name = "bielik-how-to-start"
version = "0.1.0"
description = ""
authors = ["Marcin Wątroba <marcin.watroba@deviniti.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2.1"
jupyterlab = "^4.2.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
